# HookOpenMomory

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/alex/hookopenmomory/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/cpp/: dump.cpp  dump.h
app/src/main/java/com/alex/hookopenmomory/: AppAdapter.java  Appinfo.java  CommandExecution.java  Config.java  DensityUtil.java  Dumper.java  KillProcessById.java  MainActivity.java  MainHook.java  OnItemClickLitener.java  PermissionUtil.java  PreferenceUtils.java
app/src/main/res/layout/: activity_main.xml  item_layout.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/alex/hookopenmomory/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
